syntax = "proto3";

option java_multiple_files = true;

package com.service.message;

message MessageRequest{
  string text = 1;
}

message MessageResponse{
  string uuid =1;
  string text = 2;
}

service MessageService {
  rpc saveMessage(MessageRequest) returns (MessageResponse){}
}


